PLFM-8273: Add integration test